# flowtap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
docs/: CODE_WALKTHROUGH.md
flowtap/: Cargo.toml  build.rs
flowtap-common/: Cargo.toml
flowtap-common/src/: lib.rs
flowtap-ebpf/: Cargo.toml  build.rs
flowtap-ebpf/src/: main.rs
flowtap/src/: main.rs  output.rs  redact.rs
