[workspace]
resolver = "2"
members = ["flowtap", "flowtap-common", "flowtap-ebpf"]
default-members = ["flowtap", "flowtap-common"]

[workspace.package]
version = "0.0.3-beta"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.98"
aya = { version = "0.14.0", default-features = false }
aya-build = { version = "0.2.0", default-features = false }
aya-ebpf = { version = "0.2.1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
chrono = { version = "0.4.41", default-features = false }
clap = { version = "4.5.40", default-features = false }
libc = { version = "0.2.172", default-features = false }
serde = { version = "1.0.219", default-features = false }
serde_json = { version = "1.0.140", default-features = false }
tokio = { version = "1.45.1", default-features = false }
which = { version = "8.0.4", default-features = false }

[profile.release.package.flowtap-ebpf]
debug = 2
codegen-units = 1
